--- a/index.html
+++ b/index.html
@@ -1255,10 +1255,8 @@ The following image works as a link:<br>
         document.addEventListener('DOMContentLoaded', function() {
             // Start with welcome screen
             showScreen('welcome-screen');
-        });
-    </script>
-</body>
-</html>00737c;">Dr. Michael Chen</div>
+
+            Dr. Michael Chen</div>
                                     <div style="font-size: 0.9rem; color: #666;">Neurologist</div>
                                     <div style="font-size: 0.8rem; color: #888;">0.8 miles away</div>
                                     
@@ -1274,3 +1272,8 @@ The following image works as a link:<br>
                                 <div style="width: 60px; height: 60px; background-color: #e0e0e0; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; color: #00737c; font-size: 1.5rem;">👩‍⚕️</div>
                                 <div style="flex: 1;">
                                     <div style="font-weight: 600; color: #
+
+        });
+    </script>
+</body>
+</html>00737c;">
