--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
 The following image works as a link:<br>
       <a href="https://drive.google.com/file/d/13jT7G5YIv50I8XbpohBQcApdq-JkYjbD/view?usp=sharing">
-         <img alt="An image from Desktop" src="https://drive.google.com/file/d/13jT7G5YIv50I8XbpohBQcApdq-JkYjbD/view?usp=sharing"
+         <img alt="healthguard banner" src="https://drive.google.com/file/d/13jT7G5YIv50I8XbpohBQcApdq-JkYjbD/view?usp=sharing"
          width=150" height="70">
 
 
