--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ The following image works as a link:<br>
                 <div id="welcome-screen" class="screen-section active">
                     <div class="welcome-screen">
                         <div class="welcome-header" style="height: auto; padding: 0;">
-                            <img src="https://drive.google.com/file/d/13jT7G5YIv50I8XbpohBQcApdq-JkYjbD/view?usp=sharing" style="width: 100%; display: block;">
+                            <img src="https://drive.google.com/file/d/13jT7G5YIv50I8XbpohBQcApdq-JkYjbD/view?ts=67e57558"width: 100%; display: block;">
                         </div>
                         <div class="welcome-body">
                             <div class="welcome-buttons">
